feat(karma-esm): enable testing with modules on all browsers

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:update-snapshots": "karma start --update-snapshots",
     "test:prune-snapshots": "karma start --prune-snapshots",
     "test:ci": "lerna run test:ci",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:bs": "karma start karma.bs.conf.js --legacy --coverage",
+    "test:compatibility": "karma start --auto-watch=true --single-run=false --compatibility --coverage",
+    "test:bs": "karma start karma.bs.conf.js --compatibility --coverage",
     "vuepress:build": "vuepress build docs",
     "vuepress:start": "vuepress dev docs"
   },
